# texty

./: CMakeLists.txt  TODOs.txt
include/: formatter.hpp  helpers.hpp  messenger-client.hpp  messenger-host.hpp  messenger.hpp
socket/include/: communicator.hpp  helpers.hpp  message.hpp  msocket_client.hpp  msocket_host.hpp
source/: client-main.cpp  host-main.cpp  messenger-client.cpp  messenger-host.cpp  messenger.cpp
